Todo:
- Make the color selector clickable.
- Use the selected color when Opaque ink is selected.
- CEL put mode (0 on hungarian keyboard).
- CEL put mode should respect the (K) button.
- Autosave in every 1 min.
- Configurable autosave interval.

2023.02.15
- Added color selector to controls. Not yet clickable.

2023.02.14
- Small bugfix in writing color index under cursor.
- Removed (A) button. Has no meaning with paletted mode.

2023.02.13
- Bugfix with clickin anomaly. Click was on mouseup in TMouseObject, but was
  on mousedown in TDrawArea. Changed it in TDrawArea.

2023.02.12
- GETCEL really copies the selected area into CELImage.
  (It saves it to a PNG on exit, to be sure.)
- CEL is saved on exit and reloaded on startup.
- BUG narrowed down: The colored line appears only in PNG file and
  only with odd width. So the bug is in the PNG writer.
- BUG fixed: Writing paletted images with odd with and 4, 2 or 1 bitdepth was
  bugged. (Had to move the bit shift operations after adding the color bits.)

2023.02.10
- Added Pinnable property to tools, to differentiate between tools that can be
  selected in tool selector and the tools that cannot be selected. (The latter
  are used internally like GETCEL or PUTCEL.)
- Bugfix in BOX tool.

2023.02.02
- Added a small area showing cursor coordinates and color index under cursor.
  (Currently it is the part of Controls, but should separate it, to be visible
  even with hidden Controls.)

2023.02.01
- Drawing shapes respects the (F) button.
- Added a nice splash screen. (Turn it off in the .ini [Settings]/ShowSplash=No)

2023.01.31
- Added (F) (K) and (A) toggle buttons. (Fill shapes, clear key color and use alpha respectively)
- Cosmetics: Fix in system font in letter K and L. These were only 4 pixel width.

2023.01.30
- ESC hides controls and activates CEL picker. Right clicking in any phase will
  return controls and activates previous tool.

2023.01.27