@@ -31,10 +31,10 @@ const
   TOOLBUTTONSTOP=6;
   INKBUTTONSLEFT=643;
   INKBUTTONSTOP=6;
-//  TOGGLEBUTTONSLEFT=WINDOWWIDTH-SMALLBUTTONWIDTH-3;
   COLORSELECTORLEFT=TOOLBUTTONSLEFT+2*NORMALBUTTONWIDTH+12;
   COLORSELECTORTOP=6;
   COLORSELECTORBOXSIZE=36;
+  COLORSELECTORCOLORS=8;
   TOGGLEBUTTONSLEFT=INKBUTTONSLEFT+2*(NORMALBUTTONWIDTH+3);
   TOGGLEBUTTONSTOP=6;
   MAXPALETTEENTRIES=2048;  // Palette color count hard limit
