@@ -30,7 +30,7 @@ Tool2=LINE
 Tool3=CIRCLE
 Tool4=SEP.
 Tool5=FILL
-ActiveTool=0
+ActiveTool=1
 Ink0=OPAQUE
 Ink1=OPAQUE
 Ink2=L GRAD
@@ -44,4 +44,14 @@ UseAlpha=No
 
 [Settings]
 ShowSplash=No
+
+[Colors]
+Selected0=0
+Selected1=1
+Selected2=2
+Selected3=3
+Selected4=4
+Selected5=5
+Selected6=6
+Selected7=7
 
